--- a/index.html
+++ b/index.html
@@ -4,11 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/styles.css">
+    <title>Text Analyzer</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/styles.css" type="text/css">
     <script src="/js/scripts.js"></script>
-    <title>Text Analyzer</title>  
 </head>
 <body>
-    
-</body>
+    <div class="container">
+      <h2>Text Analyzer</h2>
+      <form id="word-counter">
+        <div class="form-group">
+          <p>Input a text passage to get a total word count:</p>
+          <textarea id="text-passage" name="text-passage" class="form-control"></textarea>
+          <p>Optionally enter a word to count the number of times it occurs in the passage:</p>
+          <input type="text" id="word" name="word" class="form-control">
+          <br />
+          <button type="submit" class="btn btn-success">Submit Survey</button>
+        </div>
+      </form>
+      <p>Total Word Count: <span id="total-count"></span></p>
+      <br />
+      <p>Selected Word Count: <span id="selected-count"></span></p>
+      <div id="bolded-passage">
+  
+      </div>
+    </div>
+  </body> 
 </html>
